[package]
name = "bevyquest"
authors = ["Magos Daishi <magosdaishi@magosdaishi.de>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.8.5"
bevy = "0.10.1"
bevy_rapier2d = { version = "0.21", features = [
    "simd-stable",
    "debug-render-2d",
] }
bevy-inspector-egui = { version = "0.18.0", default-features = false, features = [
    "bevy_pbr",
] }
bevy_turborand = "0.5"
bevy_easings = "0.10"
bevy_editor_pls = "0.4.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
